--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "csi-nextjs",
+  "name": "csi-nextjs-lux-white",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,15 +8,15 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "^15.0.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "next": "14.2.3",
+    "react": "^18",
+    "react-dom": "^18",
     "nodemailer": "^6.9.13"
   },
   "devDependencies": {
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "@types/nodemailer": "^6.4.14",
     "typescript": "^5"
   }
