--- a/package.json
+++ b/package.json
@@ -1,23 +1,17 @@
 {
-  "name": "csi-nextjs-lux-white",
-  "version": "0.1.0",
+  "name": "csi-site",
   "private": true,
+  "version": "1.0.0",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
-    "next": "14.2.3",
-    "react": "^18",
-    "react-dom": "^18",
-    "nodemailer": "^6.9.13"
-  },
-  "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "@types/nodemailer": "^6.4.14",
-    "typescript": "^5"
+    "next": "14.2.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "nodemailer": "6.9.13"
   }
 }
